# vpDecisions

./: .gitattributes  .gitignore  CLAUDE.md  OFFLINE_MODE_SETUP.md  OFFLINE_SYNC_PLAN.md  analyzer.html  index.html  trainer-ev.html  video-poker-trainer.html
cloudflare-pages/: privacy.html  terms.html
docs/: GAME_FAMILIES.md  PAYTABLES.md  ULTIMATE_X_IMPLEMENTATION_PLAN.md  VARIANTS.md  app-store-reviews.txt  license-agreement.html  privacy-policy.html  video-poker-youtube-channels.md  www-pay-tables.md
hand-analyzer/: Cargo.toml  conflict_summary.md
scripts/: calculate-parallel.js  calculate-strategy.js  check_between_j_only.js  check_between_suited_tq.js  csv_with_standard_descriptions.js  export_from_supabase.sql  export_strategy.js  find_non_continuous_standard.js  generate_all_strategies.sh  package-lock.json  package.json  progress.js  test-small.js  unique_description_ev_pairs.csv  unique_description_ev_pairs.js  upload_strategies_to_supabase.sh  verify-strategy.js
scripts/rust_calculator/: Cargo.toml  PAYTABLES.md  generate_www_strategies.sh
scripts/rust_calculator/src/: main.rs
shared/: config.js
supabase-uploads/: strategy_bonus_poker_7_5.vpstrat  strategy_bonus_poker_8_5.vpstrat  strategy_deuces_wild_full_pay.vpstrat  strategy_deuces_wild_nsud.vpstrat  strategy_double_bonus_10_7.vpstrat  strategy_double_double_bonus_9_6.vpstrat  strategy_jacks_or_better_6_5.vpstrat  strategy_jacks_or_better_7_5.vpstrat  strategy_jacks_or_better_8_5.vpstrat  strategy_jacks_or_better_8_5_35.vpstrat  strategy_jacks_or_better_8_6.vpstrat  (+6 more)
web/: analyzer.html  (+5 more)
(+357 files in other folders)
