[package]
name = "vp_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15"
itertools = "0.12"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
